test/should_fail/inh_model_002.gm
model inh_model_002;

node class A extends B;
node class B extends A;
